--- a/Projects/fish-info/css/stylesheet.css
+++ b/Projects/fish-info/css/stylesheet.css
@@ -1,17 +1,67 @@
 body {
 	font-family: 'Hammersmith One', sans-serif;
+	background-color: #F4FCE8;
 }
 h1 {
-	font-size: 100px;
+	font-size: 200px;
 	text-align: center;
+	color: #4E9689;
+	margin: 30px 0 0 0;
+	text-shadow: 8px 7px #87D69B;
 }
 .information {
 	text-align: center;
 	list-style: none;
+	margin-top: 0px;
 }
 .which_fish {
 	text-align: center;
+	background-color: ;
+	border-style: none;
 }
+
+input[type="text"], textarea {
+
+  background-color : rgba(126,208,214,0.8);
+  border-style: none; 
+  color: #4E9689;
+  width: 40%;
+  height: 60px;
+  text-align: center;
+  font-size: 25px;
+
+
+}
+
 li {
 	list-style: none;
+}
+h2 {
+	font-size: 30px;
+	color: #C3FF68;
+}
+.fish-name { 
+	text-align: center;
+}
+h3 {
+	color: #87D69B;
+	font-size: 50px;
+}
+ul {
+	padding-left: 0;
+}
+.spec-information {
+	font-size: 20;
+	color: #C3FF68
+}
+.info {
+	font-size: 20;
+	color: #87D69B;
+}
+img {
+height: 200;
+border: 0;
+}
+header{
+	margin-bottom: 0;
 }
