--- a/Projects/tictacktoe/css/style.css
+++ b/Projects/tictacktoe/css/style.css
@@ -56,9 +56,11 @@ td {
 	text-align: center;
 	padding: 0;
 	margin: 0;
-	
 }
-h1{
+td:hover {
+		background-color: white;
+}
+h1 { 
 	text-align: center;
 	font-family: 'Amatic SC', cursive;
 	font-size: 110px;
